Header nav links get hover background and transitions. Fixed z-index of logo vs. logo-label for transition.

--- a/dev/assets/css/scss/styles.scss
+++ b/dev/assets/css/scss/styles.scss
@@ -12,15 +12,18 @@
 		--color-accent-1-hover: color(display-p3 0.5411 0.7725 0.349); //P3
 	}
 	
-	--color-background: #191815;
+	--color-background: #31302e;
+	--color-element-background: #3f3d3b;
 	--color-text: #cdc6c6;
 	
 	--color-ukraineFlag-top: #005abb;
 	--color-ukraineFlag-bottom: #fdd400;
+	
+	--border-radius-M: 0.5rem;
 }
 
 html {
-	font-family: skolar-sans-latin, sans-serif;
+	font-family: skolar-sans-latin, "Skolar Sans Latin", sans-serif;
 	font-size: 1.0625em; //assuming 16px default, this is 17px
 	font-weight: 300;
 	margin: 0;
@@ -57,31 +60,35 @@ header {
 	justify-content: space-between;
 	line-height: var(--line-height-M);
 	a#logo {
+		position: relative;
 		span {
 			display: inline-block;
 			vertical-align: top;
-			transform: translateX(calc(-100% - .5rem));
+			transform: translateX(calc(var(--line-height-M) * 1.29 * .7));
 			opacity: 0;
 			transition-property: opacity transform;
 			transition-duration: 180ms;
 			transition-timing-function: ease-out;
+			padding: 0 0.5rem;
+			border-radius: var(--border-radius-M);
 		}
 		&:hover span {
-			transform: translateX(0);
+			transform: translateX(calc(var(--line-height-M) * 1.29)); //1.29 = aspect ratio of logo
 			opacity: 1;
+			background-color: var(--color-element-background);
 		}
 		svg {
+			position: absolute;
+			z-index: 1000;
 			height: var(--line-height-M);
 			aspect-ratio: 1;
 			display: inline-block;
-			fill: var(--color-text);
+			//fill: var(--color-text);
+			fill: url(#ukraineFlag);
 			margin-right: .5rem;
 			transition-property: fill;
 			transition-duration: 500ms;
 			transition-timing-function: ease-out;
-		}
-		&:hover svg {
-			fill: url(#ukraineFlag);
 		}
 	}
 	nav {
@@ -97,7 +104,26 @@ header {
 		}
 		li {
 			display: inline-block;
-			margin-left: 1rem;
+			a {
+				display: inline-block;
+				padding: 0 0.5rem;
+				background-color: transparent;
+				border-radius: var(--border-radius-M);
+				transition-property: background-color;
+				transition-duration: 250ms;
+				transition-timing-function: ease-out;
+				&:hover, &:focus {
+					background-color: var(--color-element-background);
+					transition-duration: 110ms;
+				}
+			}
 		}
+	}
+	a, a:link, a:active, a:visited {
+		color: var(--color-text);
+	}
+	a:hover, a:focus {
+		text-decoration: none;
+		color: var(--color-accent-1-hover);
 	}
 }
